WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
73169
CSS/XSLStyleSheet: checkLoaded() needn't be virtual.
https://bugs.webkit.org/show_bug.cgi?id=73169
Summary
CSS/XSLStyleSheet: checkLoaded() needn't be virtual.
Andreas Kling
Reported
2011-11-27 08:09:38 PST
checkLoaded() does not exist in the common parent class (StyleSheet), so it shouldn't be virtual in the CSS/XSL StyleSheets.
Attachments
Patch
(1.56 KB, patch)
2011-11-27 08:11 PST
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2011-11-27 08:11:11 PST
Created
attachment 116673
[details]
Patch
Antti Koivisto
Comment 2
2011-11-27 10:56:36 PST
Comment on
attachment 116673
[details]
Patch Wish these had a better name/were factored differently.
WebKit Review Bot
Comment 3
2011-11-27 12:20:43 PST
Comment on
attachment 116673
[details]
Patch Clearing flags on attachment: 116673 Committed
r101206
: <
http://trac.webkit.org/changeset/101206
>
WebKit Review Bot
Comment 4
2011-11-27 12:20:47 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug