CSS/XSLStyleSheet: checkLoaded() needn't be virtual. <http://webkit.org/b/73169>

Patch by Andreas Kling <kling@webkit.org> on 2011-11-27
Reviewed by Antti Koivisto.

Devirtualize checkLoaded() in CSSStyleSheet and XSLStyleSheet as they
are not overriding anything, nor are they ever overridden.

* css/CSSStyleSheet.h:
* xml/XSLStyleSheet.h:

Canonical link: https://commits.webkit.org/89687@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101206 268f45cc-cd09-0410-ab3c-d52691b4dbfc