Source/WebCore/css/CSSStyleSheet.h
@@ -88,7 +88,7 @@ public:
 
     virtual bool isLoading();
 
-    virtual void checkLoaded();
+    void checkLoaded();
     void startLoadingDynamicSheet();
 
     Node* findStyleSheetOwnerNode() const;
